# exb-sdk

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-package.yaml  publish-pypi.yaml  test.yaml
docs/: conf.py  index.md
exb_sdk/workflow_client/: client.py  exceptions.py
tests/workflow_client/: test_get_result.py
