[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "exb-sdk"
description = "SDK for working with ExB (app.exb.de)"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Riccardo Padoan", email = "riccardo.padoan@exb.de"},
]
maintainers = [
    {name = "Riccardo Padoan", email = "riccardo.padoan@exb.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ExB-Group/exb-sdk"
Documentation = "https://ExB-Group.github.io/exb-sdk"
Changelog = "https://github.com/ExB-Group/exb-sdk/releases"
Repository = "https://github.com/ExB-Group/exb-sdk"
"Issue Tracker" = "https://github.com/ExB-Group/exb-sdk/issues"

[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-autobuild>=2024.2.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=7.2.6",
]
linting = [
    "gitlint>=0.19.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.2",
    "ruff>=0.2.2",
]
testing = [
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.1",
]

[tool.pdm.options]
lock = [
    "--group=:all",
]

[tool.pdm.version]
source = "scm"
write_to = "exb_sdk/__version__.py"
write_template = "__version__ = \"{}\"\n"

[tool.semantic_release]
tag_format = "{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "Merge pull request.*",
]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
preview = true

[tool.ruff.lint]
fixable = [
    "ALL",
]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "ERA",   # eradicate
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "NPY",   # numpy
    "PD",    # pandas-vet
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PLC",   # pylint - convention
    "PLE",   # pylint - error
    "PLW",   # pylint - warning
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle - warning
    "YTT",   # flake8-2020
]
ignore = [
    "ANN101", # flake8-annotations - missing-type-self - deprecated
    "ANN102", # flake8-annotations - missing-type-cls - deprecated
    "D100",   # pydocstyle - undocumented-public-module
    "D104",   # pydocstyle - undocumented-public-package
    "PT004",  # flake8-pytest-style - pytest-missing-fixture-name-underscore - see: https://github.com/astral-sh/ruff/issues/8796
    "PT005",  # flake8-pytest-style - pytest-incorrect-fixture-name-underscore - see: https://github.com/astral-sh/ruff/issues/8796
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "C901", # mccabe - complex-structure
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false # see: https://github.com/astral-sh/ruff/issues/8796
mark-parentheses = false    # see: https://github.com/astral-sh/ruff/issues/8796

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov"
asyncio_mode = "auto"
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = ["exb_sdk"]
omit = ["exb_sdk/__version__.py"]

[tool.coverage.report]
exclude_also = [
    'if\s+(typing\.)?TYPE_CHECKING:',
]

[tool.pdm.scripts.install-git-hooks]
help = "Install pre-commit hooks"
cmd = "pre-commit install --install-hooks"

[tool.pdm.scripts.lint]
help = "Run pre-commit"
cmd = "pre-commit run --all-files"

[tool.pdm.scripts.test]
help = "Run tests"
cmd = "pytest"

[tool.pdm.scripts.docs-build]
help = "Build docs"
cmd = "sphinx-build docs docs/_build"

[tool.pdm.scripts.docs-serve]
help = "Build and serve docs"
cmd = "sphinx-autobuild --watch exb-sdk docs docs/_build"

[tool.pdm.scripts._ci-lint-code]
cmd = [
    "pre-commit",
    "run",
    "--show-diff-on-failure",
    "--from-ref",
    "${FROM_REF}",
    "--to-ref",
    "${TO_REF}",
]

[tool.pdm.scripts._ci-lint-commits]
cmd = [
    "gitlint",
    "--contrib",
    "contrib-title-conventional-commits",
    "--ignore",
    "body-is-missing",
    "--commits",
    "${FROM_REF}..${TO_REF}",
]
